# python-email-service

./: .env.example  main.py  pyproject.toml
src/: dependencies.py
src/adapters/: email_sender_gateway.py
src/exceptions/: email_service_exception.py
src/infra/: smtp_server.py
src/routes/: email_sender.py
src/schema/: email_sender.py
src/service/: email_sender.py
