[project]
name = "py-mvc-uberapp"
version = "0.1.0"
description = ""
authors = [
    {name = "felipe",email = "felipe.a.melo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
